[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu/start.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Username" type="LineEdit" parent="."]
margin_left = 263.441
margin_top = 52.8459
margin_right = 792.441
margin_bottom = 164.846
placeholder_text = "Username"
script = ExtResource( 1 )

[node name="Join" type="Button" parent="."]
margin_left = 118.0
margin_top = 319.0
margin_right = 366.0
margin_bottom = 401.0
text = "Join"
script = ExtResource( 1 )

[node name="Create" type="Button" parent="."]
margin_left = 637.634
margin_top = 319.549
margin_right = 859.634
margin_bottom = 401.549
text = "Create"
script = ExtResource( 1 )
[connection signal="text_changed" from="Username" to="." method="_onTextFieldChanged"]
[connection signal="text_entered" from="Username" to="." method="_onTextFieldEntered"]
[connection signal="pressed" from="Join" to="." method="_onJoinButtonPressed"]
[connection signal="pressed" from="Create" to="." method="_onCreateButtonPressed"]
